<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tolabulilm.jadwalkajian.user.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/login_jadwalkajian"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="20dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:backgroundTint="@color/white"
            android:id="@+id/login_input_email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:id="@+id/login_input_password"
            android:fontFamily="Roboto"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        android:id="@+id/login_daftar"
        android:text="@string/login_daftar_text"/>
</LinearLayout>
